--- a/ExcelAddIn/HcExcelAddIn.csproj
+++ b/ExcelAddIn/HcExcelAddIn.csproj
@@ -39,6 +39,9 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <PackageReference Include="Serilog.Enrichers.Process" Version="3.0.0" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="stdole" Version="17.13.40008" />
   </ItemGroup>
