--- a/COMContract/COMContract.csproj
+++ b/COMContract/COMContract.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>x86;x64</Platforms>
   </PropertyGroup>
 	
 </Project>
